<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ArticoleLicitate">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvGeanta"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="219dp" />



    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        app:srcCompat="@drawable/ic_action_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBalerini"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="219dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="73dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBluza"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="419dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="274dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPalarie"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="419dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="274dp"
        tools:srcCompat="@tools:sample/avatars" />

</LinearLayout>